--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Graph Traversal</title>
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
-<body style="background-color: rgb(30,30,25)">
+<body>
 	<canvas id="canvas" width=1200px height=800px></canvas>
 	<script src="scripts/main.js"></script>
 </body>
